[package]
name = "daraja-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Example, use the version numbers you need
tide = "0.16.0"
async-std = { version = "1.8.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
#reqwest = { version = "0.12.4", features = ["json"] }
base64 = "0.22.1"
serde_json = { version = "1.0.116", features = ["std"] }
#tokio = { version = "1.37.0", features = ["full"] }
surf = "2.3.2"

driftwood = "0.0.7"

